Blog content implementation

--- a/projects.json
+++ b/projects.json
@@ -1,7 +1,7 @@
 [
 	{
 		"title": "Carbon Cycle Simulator",
-		"description": "this is a thing I did for a teacher to get her to love me because she had an activity and I upgraded it to a wacky digital thingimajig",
+		"description": "One day in Biology class, we were doing a complicated simulation of the carbon cycle; 'wow, I could automate that,' I thought. Well, I did, and here's the result!",
 		"links": [
 			{
 				"text": "Live Website",
