rename "website" links to "use it" in projects.json

--- a/projects.json
+++ b/projects.json
@@ -4,7 +4,7 @@
 		"description": "Exploring natural language processing for a presentation, I made a grammar parser which can randomly generate sentences in various languages. I plan to use it to create a math problem generator.",
 		"links": [
 			{
-				"text": "[website]",
+				"text": "[use it]",
 				"href": "https://students.washington.edu/bcolberg/grammar/"
 			},
 			{
@@ -18,7 +18,7 @@
 		"description": "One day in Biology class, we were doing a complicated simulation of the carbon cycle; 'wow, I could automate that,' I thought. Well, I did, and here's the result!",
 		"links": [
 			{
-				"text": "[website]",
+				"text": "[use it]",
 				"href": "https://carbon.brennancolberg.com/"
 			},
 			{
@@ -32,7 +32,7 @@
 		"description": "Have you ever been playing a nice game of \"Axis & Allies\"™ yet cannot remember whose turn it is or lack sufficiently badass music? Worry no longer! This website cycles through the countries in proper order, showing their flags and playing their anthems (all as in WWII)!",
 		"links": [
 			{
-				"text": "[website]",
+				"text": "[use it]",
 				"href": "https://brennancolberg.github.io/axis-allies/"
 			},
 			{
@@ -46,7 +46,7 @@
 		"description": "Putting the \"free\" back into Free Methodist Bible Quizzing, this program effectively simulates a $150 set of jump seats and can be used with a simple combination of screen and standard QWERTY keyboard!",
 		"links": [
 			{
-				"text": "[website]",
+				"text": "[use it]",
 				"href": "https://fmbq.brennancolberg.com/"
 			},
 			{
