--- a/projects.json
+++ b/projects.json
@@ -1,5 +1,5 @@
-[
-	{
+{
+	"grammar": {
 		"title": "Sentence Generator",
 		"description": "Exploring natural language processing for a presentation, I made a grammar parser which can randomly generate sentences in various languages. I plan to use it to create a math problem generator.",
 		"language": "php",
@@ -14,7 +14,7 @@
 			}
 		]
 	},
-	{
+	"carbon": {
 		"title": "Carbon Cycle Simulator",
 		"description": "One day in Biology class, we were doing a complicated simulation of the carbon cycle; 'wow, I could automate that,' I thought. Well, I did, and here's the result!",
 		"language": "javascript",
@@ -29,7 +29,7 @@
 			}
 		]
 	},
-	{
+	"axis-allies": {
 		"title": "Axis & Allies Dashboard",
 		"description": "Have you ever been playing a nice game of \"Axis & Allies\"™ yet cannot remember whose turn it is or lack sufficiently badass music? Worry no longer! This website cycles through the countries in proper order, showing their flags and playing their anthems (all as in WWII)!",
 		"language": "javascript",
@@ -44,7 +44,7 @@
 			}
 		]
 	},
-	{
+	"binary-quiz": {
 		"title": "Binary Quiz (App Lab)",
 		"description": "A simple quiz that asks you to categorize words into one of two similar categories! Simple, but addictive. Made with code.org's \"App Lab\".",
 		"language": "javascript",
@@ -55,7 +55,7 @@
 			}
 		]
 	},
-	{
+	"fmbq": {
 		"title": "FMBQ Jump Lights",
 		"description": "Putting the \"free\" back into Free Methodist Bible Quizzing, this program effectively simulates a $150 set of jump seats and can be used with a simple combination of screen and standard QWERTY keyboard!",
 		"language": "javascript",
@@ -70,7 +70,7 @@
 			}
 		]
 	},
-	{
+	"bframework": {
 		"title": "BFramework C",
 		"description": "I taught myself Java by building a video game framework. Was it dumb? Probably. Did it work? Yep, it worked! I and a team built a game on top of this framework and took 2nd place internationally in TSA's \"Video Game Design & Programming\" event in 2017.",
 		"language": "java",
@@ -81,4 +81,4 @@
 			}
 		]
 	}
-]
+}
