added BV.game to projects

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -56,6 +56,17 @@
 		]
 	},
 	{
+		"title": "BV.game",
+		"description": "A simple game made with a completely rebuilt version of BFramework, with teammates, for the TSA \"Video Game Design/Programming\" event in 2018.",
+		"language": "java",
+		"links": [
+			{
+				"text": "[code]",
+				"href": "https://github.com/BrennanColberg/BV.game"
+			}
+		]
+	},
+	{
 		"title": "Binary Quiz (App Lab)",
 		"description": "A simple quiz that asks you to categorize words into one of two similar categories! Simple, but addictive. Made with code.org's \"App Lab\".",
 		"language": "javascript",
