technology class name generation

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -13,8 +13,9 @@
     "technologies": [
       "HTML",
       "CSS",
-      "Vanilla JS",
-      "React JS"
+      "JavaScript",
+      "Java",
+      "React"
     ]
   }
 ]
