made preview generation flexible with presence of JSON elements

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,6 +1,6 @@
 [
   {
-    "name": "BFramework",
+    "title": "BFramework",
     "links": [
       {
         "text": "code",
@@ -14,7 +14,7 @@
     "description": "yada yada"
   },
   {
-    "name": "Axis & Allies Dashboard",
+    "title": "Axis & Allies Dashboard",
     "links": [
       {
         "text": "code",
