--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "rm -rf docs && react-scripts build && mv build docs",
+    "build": "react-scripts build",
+    "deploy": "source deploy.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
