--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^8.0.1",
     "next": "9.5.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-markdown": "^5.0.2",
     "sass": "^1.27.0"
   }
 }
