--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "firebase": "^8.0.1",
-    "next": "9.5.5",
+    "next": "^10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-markdown": "^5.0.2",
