--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "next": "^10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-markdown": "^5.0.2",
-    "sass": "^1.27.0"
+    "react-markdown": "^5.0.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.3.1",
+    "postcss": "^8.1.10",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^2.0.1"
   }
 }
