--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "^10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-markdown": "^5.0.2"
+    "react-markdown": "^5.0.2",
+    "sharp": "^0.26.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.3.1",
